@@ -5,7 +5,7 @@ usePermissions: false
 # localized global strings
 msg:
   forbidden: Sorry, you have no permission to use this command
-  onlyPlayers: Sorry, this command is only for online players
+  onlyPlayers: Note this command only makes sense for online players
   notInVillage: You are not inside a Village radius
   center: Center
   radius: Radius
