@@ -1,3 +1,8 @@
+v7
+
+- finally craftbukkit 1.13+ support, yay!
+- added a license text (gpl v3), please read it at least once
+
 v6
 
 - extend compatibility through reflection
